<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn ="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            />
        <item
            android:id="@+id/nav_about"
            android:title="@string/about"
            />
        <item
            android:id="@+id/nav_service"
            android:title="@string/service"
            />
        <item
            android:id="@+id/nav_howItWorks"
            android:title="@string/howItWorks"
            />
        <item
            android:id="@+id/nav_contact"
            android:title="@string/contact"
        />
    </group>
    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_auth"
                android:title="@string/auth"
                />
        </menu>

    </item>


</menu>