<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.Login"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvLogin"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/primaryColor"/>

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/etCorreo"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/etContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/etContraseña"
        android:autofillHints="password"
        android:inputType="textPassword"/>

    <CheckBox
        android:id="@+id/cbRecordar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:text="@string/cbRecordar"/>

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnIngresar"/>

</LinearLayout>